Changed img width to 100% in hopes of fixing the odd stretched look

--- a/project2.css
+++ b/project2.css
@@ -34,7 +34,7 @@ body{
 
 img{
     display: block;
-	width: 50%;
+	width: 100%;
 	}
 	
 #column2{
@@ -63,14 +63,21 @@ h3{
     font-size: 1.6em;
 	font-style: italic;
 	margin-top: 2em;
-	margin-bottom: 0em;
+	margin-bottom: 3.6em;
 	}
 	
 h4{
     font-size: 1.6em;
-	margin-top: 3.8em;
+	margin-top: 0.2em;
 	margin-bottom: 0em;
 	}
+	
+p{
+    font-size: 1.4em;
+	margin-top: 1.3em;
+	margin-bottom: 0.9em;
+	}
+	
 /*body{
     font-size: 1.8em;
     margin-left: 3em;
